--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,308 @@
   scroll-behavior: smooth;
   box-sizing: border-box;
 }
+
+.embla__viewport {
+  overflow: hidden;
+}
+
+.embla__container {
+  display: flex;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.embla__slide {
+  flex: 0 0 100%;
+  min-width: 0;
+}
+
+
+/* Embla Styles  */
+.embla {
+  max-width: 48rem;
+  margin: auto;
+  --slide-height: 19rem;
+  --slide-spacing: 1rem;
+  --slide-size: 80%;
+}
+
+.embla__viewport {
+  overflow: hidden;
+}
+
+.embla__container {
+  display: flex;
+  touch-action: pan-y pinch-zoom;
+  margin-left: calc(var(--slide-spacing) * -1);
+}
+
+.embla__slide {
+  transform: translate3d(0, 0, 0);
+  flex: 0 0 var(--slide-size);
+  min-width: 0;
+  padding-left: var(--slide-spacing);
+}
+
+.embla__slide__img {
+  border-radius: 1.8rem;
+  display: block;
+  height: var(--slide-height);
+  width: 100%;
+  object-fit: cover;
+}
+
+.embla__controls {
+  /* display: grid; */
+  /* grid-template-columns: auto 1fr; */
+  /* justify-content: space-between; */
+  /* gap: 1.2rem; */
+  /* margin-top: 1.8rem; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.embla__buttons {
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
+}
+
+.embla__button {
+  /* -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), .5); */
+  /* appearance: none; */
+  /* touch-action: manipulation; */
+  cursor: pointer;
+  z-index: 1;
+  /* background-color: rgba(0, 0, 0, 0); */
+  border: 0px;
+  /* justify-content: center; */
+  align-items: center;
+  /* width: 2rem; */
+  /* height: 3.6rem; */
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+  display: flex;
+}
+
+.embla__button:disabled {
+  color: var(--detail-high-contrast);
+}
+
+.embla__button__svg {
+  width: 35%;
+  height: 35%;
+}
+
+.embla__dots {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
+}
+
+.embla__dot {
+  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  width: 2.6rem;
+  height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  color: var(--detail-high-contrast);
+  margin-right: calc((2.6rem - 1.4rem) / 2);
+}
+
+.embla__dot:after {
+  box-shadow: inset 0 0 0 0.2rem rgb(212, 211, 211);
+  background-color: rgb(212, 211, 211);
+  width: 2.4rem;
+  height: 0.7rem;
+  display: flex;
+  align-items: center;
+  content: '';
+}
+
+.embla__dot--selected:after {
+  box-shadow: inset 0 0 0 0.2rem #C7AB17;
+  background-color: #C7AB17;
+  width: 2rem;
+}
+
+.embla__parallax {
+  border-radius: 1.8rem;
+  height: 100%;
+  overflow: hidden;
+}
+
+.embla__parallax__layer {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.embla__parallax__img {
+  max-width: none;
+  flex: 0 0 calc(115% + (var(--slide-spacing) * 2));
+  object-fit: cover;
+}
+
+.theme-light {
+  --brand-primary: rgb(47, 112, 193);
+  --brand-secondary: rgb(116, 97, 195);
+  --brand-alternative: rgb(19, 120, 134);
+  --background-site: rgb(249, 249, 249);
+  --background-code: rgb(244, 244, 244);
+  --text-body: rgb(54, 49, 61);
+  --text-comment: rgb(99, 94, 105);
+  --text-high-contrast: rgb(49, 49, 49);
+  --text-medium-contrast: rgb(99, 94, 105);
+  --text-low-contrast: rgb(116, 109, 118);
+  --detail-high-contrast: rgb(192, 192, 192);
+  --detail-medium-contrast: rgb(234, 234, 234);
+  --detail-low-contrast: rgb(240, 240, 242);
+  --admonition-note: rgb(46, 109, 188);
+  --admonition-warning: rgb(255, 196, 9);
+  --admonition-danger: rgb(220, 38, 38);
+  --brand-primary-rgb-value: 47, 112, 193;
+  --brand-secondary-rgb-value: 116, 97, 195;
+  --brand-alternative-rgb-value: 19, 120, 134;
+  --background-site-rgb-value: 249, 249, 249;
+  --background-code-rgb-value: 244, 244, 244;
+  --text-body-rgb-value: 54, 49, 61;
+  --text-comment-rgb-value: 99, 94, 105;
+  --text-high-contrast-rgb-value: 49, 49, 49;
+  --text-medium-contrast-rgb-value: 99, 94, 105;
+  --text-low-contrast-rgb-value: 116, 109, 118;
+  --detail-high-contrast-rgb-value: 192, 192, 192;
+  --detail-medium-contrast-rgb-value: 234, 234, 234;
+  --detail-low-contrast-rgb-value: 240, 240, 242;
+  --admonition-note-rgb-value: 46, 109, 188;
+  --admonition-warning-rgb-value: 255, 196, 9;
+  --admonition-danger-rgb-value: 220, 38, 38;
+}
+
+.theme-dark {
+  --brand-primary: rgb(138, 180, 248);
+  --brand-secondary: rgb(193, 168, 226);
+  --brand-alternative: rgb(136, 186, 191);
+  --background-site: rgb(0, 0, 0);
+  --background-code: rgb(12, 12, 12);
+  --text-body: rgb(222, 222, 222);
+  --text-comment: rgb(170, 170, 170);
+  --text-high-contrast: rgb(230, 230, 230);
+  --text-medium-contrast: rgb(202, 202, 202);
+  --text-low-contrast: rgb(170, 170, 170);
+  --detail-high-contrast: rgb(101, 101, 101);
+  --detail-medium-contrast: rgb(25, 25, 25);
+  --detail-low-contrast: rgb(21, 21, 21);
+  --admonition-note: rgb(138, 180, 248);
+  --admonition-warning: rgb(253, 186, 116);
+  --admonition-danger: rgb(220, 38, 38);
+  --brand-primary-rgb-value: 138, 180, 248;
+  --brand-secondary-rgb-value: 193, 168, 226;
+  --brand-alternative-rgb-value: 136, 186, 191;
+  --background-site-rgb-value: 0, 0, 0;
+  --background-code-rgb-value: 12, 12, 12;
+  --text-body-rgb-value: 222, 222, 222;
+  --text-comment-rgb-value: 170, 170, 170;
+  --text-high-contrast-rgb-value: 230, 230, 230;
+  --text-medium-contrast-rgb-value: 202, 202, 202;
+  --text-low-contrast-rgb-value: 170, 170, 170;
+  --detail-high-contrast-rgb-value: 101, 101, 101;
+  --detail-medium-contrast-rgb-value: 25, 25, 25;
+  --detail-low-contrast-rgb-value: 21, 21, 21;
+  --admonition-note-rgb-value: 138, 180, 248;
+  --admonition-warning-rgb-value: 253, 186, 116;
+  --admonition-danger-rgb-value: 220, 38, 38;
+}
+
+/* New styles for Embla Carousel slides */
+.embla__slide__card {
+  border: 1px solid #e5e7eb;
+  /* border-gray-200 */
+  padding: 1.25rem;
+  /* p-5 */
+}
+
+.embla__slide__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.embla__slide__title {
+  font-size: 1.5rem;
+  /* text-2xl */
+  color: #0F1A2B;
+  font-weight: 600;
+  /* font-semibold */
+}
+
+.embla__slide__price {
+  color: #C7AB17;
+  font-weight: 400;
+  /* font-normal */
+  font-size: 1.125rem;
+  /* text-lg */
+}
+
+.embla__slide__details {
+  border: 1px solid #e5e7eb;
+  /* border-gray-200 */
+  margin-top: 1rem;
+  /* my-4 */
+  /* margin-bottom: 1rem; */
+  /* my-4 */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.25rem;
+  /* p-1 */
+}
+
+.embla__slide__detail_item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  /* p-2 */
+  flex-direction: column;
+  gap: 0.25rem;
+  /* gap-1 */
+}
+
+.embla__slide__detail_label {
+  color: #6C757D;
+  text-align: center;
+  font-size: 0.875rem;
+  /* text-sm */
+  font-weight: 400;
+  /* font-normal */
+}
+
+.embla__slide__detail_value {
+  color: #0F1A2B;
+  font-weight: 400;
+  /* font-normal */
+  font-size: 0.875rem;
+  /* text-sm */
+  text-align: center;
+}
