--- a/app/globals.css
+++ b/app/globals.css
@@ -31,11 +31,11 @@
 
 /* Embla Styles  */
 .embla {
-  max-width: 48rem;
+  max-width: 100%;
   margin: auto;
   --slide-height: 19rem;
   --slide-spacing: 1rem;
-  --slide-size: 80%;
+  --slide-size: 40%;
 }
 
 .embla__viewport {
@@ -158,7 +158,7 @@
 .embla__parallax {
   border-radius: 1.8rem;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .embla__parallax__layer {
