--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,7 @@
 /* Embla Styles  */
 .embla {
   max-width: 100%;
-  margin: auto;
+  margin: 0 auto;
   --slide-height: 19rem;
   --slide-size: 40%;
   /* default for large screens */
@@ -88,18 +88,17 @@
 }
 
 .embla__slide {
-  /* transform: translate3d(0, 0, 0); */
+  transform: translate3d(0, 0, 0);
   flex: 0 0 var(--slide-size);
   min-width: 0;
-  /* padding-left: var(--slide-spacing); */
 }
 
 .embla__slide__img {
-  border-radius: 1.8rem;
+  /* border-radius: 1.8rem; */
   display: block;
   height: var(--slide-height);
   width: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 .embla__controls {
@@ -201,8 +200,8 @@
 }
 
 .card-style {
-  border-radius: 1.8rem;
-  height: 100%;
+  /* border-radius: 1.8rem; */
+  /* height: 100%; */
   /* overflow: hidden; */
 }
 
@@ -211,6 +210,7 @@
   height: 100%;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: center;
   transform: translateZ(0);
 }
